<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/vista"
            android:textColor="@color/text_gray_dark"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_dark" />

        <TextView
            android:id="@+id/text_tencent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/tencent_maps"
            android:textColor="@color/text_gray_dark"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_dark" />

        <TextView
            android:id="@+id/text_gaode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/amap"
            android:textColor="@color/text_gray_dark"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_dark" />

        <TextView
            android:id="@+id/text_baidu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/bmap"
            android:textColor="@color/text_gray_dark"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/background_dark" />

        <TextView
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/cancel"
            android:textColor="@color/text_gray_dark"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_dark" />
    </LinearLayout>
</RelativeLayout>

