<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="#e3e3e3" />

        <RelativeLayout
            android:id="@+id/take_camera"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/take_a_picture" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="#e3e3e3" />

        <RelativeLayout
            android:id="@+id/take_picture"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/select_from_the_album" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="#e3e3e3" />

        <RelativeLayout
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cancel" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>