<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription, Autofill, TextFields">

    <data>

        <import type="jx.android.staff.binding.vm.ResetPasswordViewModel" />
        
        <import type="jx.android.staff.binding.handler.ResetPasswordHandler" />

        <variable
            name="viewModel"
            type="ResetPasswordViewModel" />

        <variable
            name="handler"
            type="ResetPasswordHandler" />
        
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <com.aslight.titlebar.widget.CommonTitleBar
                android:id="@+id/title_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fillStatusBar="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:leftDrawable="@drawable/icon_title_back"
                app:leftDrawablePadding="10dp"
                app:leftText="设置密码"
                app:leftTextColor="@color/white"
                app:leftTextSize="16sp"
                app:leftType="textView"
                app:rightTextColor="@color/white"
                app:showBottomLine="false"
                app:statusBarColor="@color/blue"
                app:statusBarMode="light"
                app:titleBarColor="@color/blue" />

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_bar" />

            <LinearLayout
                android:id="@+id/layout_phone"
                style="@style/LoginInputLayout"
                android:layout_marginTop="100dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_logo">

                <EditText
                    android:id="@+id/editor_phone"
                    style="@style/LoginInput"
                    android:hint="@string/please_input_phone_num"
                    android:text="@={viewModel.loginParam.username}"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:nextFocusForward="@+id/editor_sms"/>

                <TextView
                    android:id="@+id/button_sms"
                    style="@style/LoginSmsButton"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:onClick="@{handler::onClickSms}"
                    android:text="@string/send_sms"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <View
                android:id="@+id/view_temp_1"
                style="@style/LoginInputLine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_phone" />

            <LinearLayout
                android:id="@+id/layout_sms"
                style="@style/LoginInputLayout"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_temp_1">

                <EditText
                    android:id="@+id/editor_sms"
                    style="@style/LoginInput"
                    android:hint="@string/please_input_sms_code"
                    android:text="@={viewModel.loginParam.verifyCode}"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:nextFocusForward="@+id/editor_password"/>
            </LinearLayout>

            <View
                android:id="@+id/view_temp_2"
                style="@style/LoginInputLine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_sms" />

            <LinearLayout
                android:id="@+id/layout_password"
                style="@style/LoginInputLayout"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_temp_2">

                <EditText
                    android:id="@+id/editor_password"
                    style="@style/LoginInput"
                    android:hint="@string/set_password_with_role"
                    android:text="@={viewModel.loginParam.password}"
                    android:password="@{viewModel.showAsPassword}"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1"/>

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="33dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="10dp"
                    android:onClick="@{()->handler.showPassword()}"
                    android:src="@{viewModel.showAsPassword ? @drawable/icon_eyes_close : @drawable/icon_eyes_open}" />
            </LinearLayout>

            <View
                android:id="@+id/view_temp_3"
                style="@style/LoginInputLine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_password" />

            <TextView
                android:id="@+id/button_confirm"
                style="@style/LoginButton"
                android:layout_marginTop="50dp"
                android:onClick="@{handler::onConfirm}"
                android:text="@string/save"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_temp_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>